<resources>
    <string name="app_name">MartFish</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="sudah_punya_akun">Sudah punya akun ?</string>
    <string name="jenis_akun">Jenis Akun</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="alamat">Alamat</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="home">Home</string>
    <string name="my_produk">My Produk</string>
    <string name="pesanan">Pesanan</string>
    <string name="transaksi">Transaksi</string>
    <string name="kategori">Kategori</string>
    <string name="examples_title_produk">Ikan 1</string>
    <string name="examples_harga">Rp. 10000</string>
    <string name="exaples_lokasi">Gowa</string>
    <string name="detail">Detail</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga">Harga</string>
    <string name="stok">Stok</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="edit_foto">Edit Foto</string>
    <string name="stok_tersedia_5">Stok tersedia: 5</string>
    <string name="detail_lokasi">Detail Lokasi</string>
    <string name="examples_name_users">Nama Pembeli</string>
    <string name="data_pembeli">Data Pembeli 1</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="jumlah_beli">Jumlah Beli per ekor</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="cod">COD</string>
    <string name="transfer">Transfer</string>
    <string name="title_activity_pembayaran">PembayaranActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="maps_api_key">AIzaSyCoXe13iF1J3DBpmdZ6JWlcBM1H0fksN9Y</string>
    <string name="pengantaran">Pengantaran</string>
    <string name="ambil_sendiri">Ambil sendiri</string>
    <string name="kurir">Kurir</string>
    <string name="metode_pembayaran_lainnya">Metode Pembayaran Lainnya</string>
    <string name="tomboltambah">tombolTambah</string>
    <string name="tombolkurang">tombolKurang</string>
    <string name="jenis_hasil_laut">Jenis hasil laut</string>
</resources>