<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.martfish.ui.autentikasi.register.RegisterViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.autentikasi.register.RegisterFragment"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILUsername"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.username}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/tILUsername"
                android:layout_marginTop="8dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.password}"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNamaLengkap"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/nama_lengkap"
                app:layout_constraintTop_toBottomOf="@+id/tILPassword"
                tools:layout_editor_absoluteX="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.namaLengkap}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jenisAkun"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jenis_akun"
                app:layout_constraintTop_toBottomOf="@+id/tilNamaLengkap"
                android:layout_marginTop="8dp">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kecamatan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/kecamatan"
                app:layout_constraintTop_toBottomOf="@+id/jenisAkun"
                tools:layout_editor_absoluteX="8dp">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kelurahan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kelurahan"
                app:layout_constraintTop_toBottomOf="@+id/kecamatan"
                android:layout_marginTop="8dp">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar"
                android:onClick="@{(view) -> viewModel.onRegister(view)}"
                app:layout_constraintTop_toBottomOf="@+id/alamat"
                android:layout_marginTop="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvSudahPunyaAkun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sudah_punya_akun"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/mbLogin"
                app:layout_constraintHorizontal_bias="0.400"
                app:layout_constraintStart_toStartOf="@+id/mbLogin"
                app:layout_constraintTop_toBottomOf="@+id/mbLogin" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/login"
                android:onClick="@{(view) -> viewModel.onLogin(view)}"
                android:textColor="@color/blue_dark"
                app:layout_constraintBottom_toBottomOf="@+id/mtvSudahPunyaAkun"
                app:layout_constraintStart_toEndOf="@+id/mtvSudahPunyaAkun"
                app:layout_constraintTop_toTopOf="@+id/mtvSudahPunyaAkun" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/alamat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alamat"
                app:layout_constraintTop_toBottomOf="@+id/kelurahan"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.alamat}"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>