<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.martfish.ui.autentikasi.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.autentikasi.login.LoginFragment"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tILUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.username}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tILPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/tILUsername"
            android:layout_marginTop="8dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.password}"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:onClick="@{(view) -> viewModel.onLogin(view)}"
            app:layout_constraintTop_toBottomOf="@+id/tILPassword"
            tools:layout_editor_absoluteX="8dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvBelumPunyaAkun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/belum_punya_akun"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/mbLogin"
            app:layout_constraintHorizontal_bias="0.400"
            app:layout_constraintStart_toStartOf="@+id/mbLogin"
            app:layout_constraintTop_toBottomOf="@+id/mbLogin" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvDaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/daftar"
            android:onClick="@{(view) -> viewModel.onRegister(view)}"
            android:textColor="@color/blue_dark"
            app:layout_constraintBottom_toBottomOf="@+id/mtvBelumPunyaAkun"
            app:layout_constraintStart_toEndOf="@+id/mtvBelumPunyaAkun"
            app:layout_constraintTop_toTopOf="@+id/mtvBelumPunyaAkun" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>