<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgProduk"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingProduk"
            style="@android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:max="5"
            android:scaleX=".5"
            android:scaleY=".5"
            android:transformPivotX="0dp"
            android:transformPivotY="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProduk" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examples_title_produk"
            app:layout_constraintTop_toBottomOf="@id/ratingProduk"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examples_harga"
            app:layout_constraintTop_toBottomOf="@id/mtvTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtvHarga"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvLokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exaples_lokasi"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/icLocation"
            app:layout_constraintTop_toTopOf="@+id/icLocation" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/detail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mtvLokasi" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>