<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.martfish.ui.fragment.detail.DetailProdukViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.detail.DetailProdukFragment"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examples_title_produk"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rating"
            android:layout_marginEnd="16dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/ratingProduk"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:max="5"
            android:scaleX="0.3"
            android:scaleY="0.3"
            android:transformPivotX="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView9" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stok tersedia: 5"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingProduk" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/examples_harga"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icLocation"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView4"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_lokasi"
            android:textSize="24sp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/icLocation"
            app:layout_constraintStart_toEndOf="@+id/icLocation"
            app:layout_constraintTop_toTopOf="@+id/icLocation"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/kecamatan"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView5"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelurahan"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView5"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/materialTextView5"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/images"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView8"
            tools:layout_editor_absoluteX="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Beri Komentar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialButton"
            tools:listitem="@layout/item_komentar"
            android:layout_marginTop="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>