<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgProduk"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingProduk"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:isIndicator="true"
            android:max="5"
            android:numStars="5"
            app:layout_constraintTop_toBottomOf="@+id/imgProduk"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="(0.0)"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/ratingProduk"
            app:layout_constraintTop_toTopOf="@+id/ratingProduk" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/examples_title_produk"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProduk" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvKilo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="KG"
            android:background="@drawable/border_orange"
            app:layout_constraintStart_toStartOf="@+id/mtvTitle"
            app:layout_constraintTop_toBottomOf="@+id/mtvTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvHarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/examples_harga"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mtvKilo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvKategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kategori 1"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mtvHarga" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvStok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stok_tersedia_5"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/mtvKategori"
            app:layout_constraintTop_toBottomOf="@+id/mtvKategori"
            tools:ignore="SmallSp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtvStok"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvKecamatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kecamatan"
            android:textSize="14sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/icLocation"
            app:layout_constraintTop_toTopOf="@+id/icLocation"
            tools:ignore="SmallSp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvKelurahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kelurahan"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/mtvKecamatan"
            app:layout_constraintTop_toBottomOf="@+id/mtvKecamatan"
            tools:ignore="SmallSp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvAlamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Alamat"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="@+id/mtvKelurahan"
            app:layout_constraintTop_toBottomOf="@+id/mtvKelurahan"
            app:layout_constraintBottom_toTopOf="@id/mbEditProduk"
            tools:ignore="SmallSp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbEditProduk"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:text="@string/edit_produk"
            android:textSize="8sp"
            android:layout_marginTop="16dp"
            app:backgroundTint="@color/green_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mbDeleteProduk"
            tools:ignore="SmallSp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbDeleteProduk"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:text="Hapus Produk"
            android:textSize="8sp"
            app:backgroundTint="@color/red_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>